# BurdaerataBackend

./: .dockerignore  .env.example  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  render.yaml
alembic/: env.py
app/: main.py
app/api/: dependencies.py
app/api/v1/: router.py
app/api/v1/endpoints/: cards.py  game.py  websocket.py
app/core/: cards_data.json  clerk.py  config.py  database.py  ws_manager.py
app/models/: __init__.py  answerCard.py  chat_message.py  game.py  gamePlayer.py  game_player.py  playerCards.py  player_card.py  profile.py  questionCard.py  round.py  roundAnswer.py  round_answer.py  user.py
app/repositories/: base_repository.py  game_repository.py  user_repository.py
app/schemas/: answerCard.py  card.py  chatMessage.py  game.py  gamePlayer.py  playerCards.py  profile.py  questionCard.py  round.py  roundAnswer.py  user.py
app/services/: card_service.py  game_service.py
tests/: conftest.py  test_game.py
