[project]
name = "backend"
version = "0.1.0"
description = "Burdaerata - Cards Against Humanity style game"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.13.0",
    "asyncpg>=0.31.0",
    "clerk-backend-api>=5.0.6",
    "fastapi[standard]>=0.135.3",
    "greenlet>=3.0.0",
    "pydantic-settings>=2.13.1",
    "psycopg2-binary>=2.9.9",
    "sqlalchemy>=2.0.49",
    "sqlmodel>=0.0.38",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
